# perroquet-api

./: .gitignore  Cargo.toml  LICENSE
db/pending/: 1.sql
migrations/applied/: genesis.sql
src/: main.rs
src/app/: config.rs  controller.rs  envy.rs  mod.rs  service.rs
src/app/dtos/: mod.rs  sync_dto.rs
src/app/fcm/: client.rs  mod.rs
src/app/models/: api_error.rs  app_error.rs  app_state.rs  mod.rs  sync_data.rs
src/app/structs/: json_from_request.rs  mod.rs
src/app/util/: dto.rs  mod.rs  sqlx.rs  time.rs
src/auth/: authman.rs  config.rs  controller.rs  mod.rs  service.rs
src/auth/apple/: client.rs  config.rs  mod.rs
src/auth/dtos/: edit_password_dto.rs  mod.rs  refresh_access_info_dto.rs  request_email_update_dto.rs  request_password_update_dto.rs  signin_apple_dto.rs  signin_dto.rs  signout_dto.rs  signup_dto.rs
src/auth/enums/: mod.rs  pepper_type.rs
src/auth/jwt/: mod.rs  service.rs
src/auth/models/: access_info.rs  claims.rs  mod.rs
src/auth/util/: password.rs
src/devices/: controller.rs  mod.rs  service.rs
src/devices/dtos/: edit_device_dto.rs  get_devices_filter_dto.rs  mod.rs
src/devices/models/: device.rs
src/mail/: mod.rs  service.rs
src/mail/templates/: mod.rs  request_email_update_template.rs  request_password_update_template.rs
src/memos/: controller.rs  mod.rs  polo.rs  service.rs
src/memos/dtos/: create_memo_dto.rs  edit_memo_dto.rs  get_memos_dto.rs  mod.rs
src/memos/models/: memo.rs
src/reminders/: controller.rs  polo.rs  service.rs
src/reminders/dtos/: create_reminder_dto.rs  edit_reminder_dto.rs  get_reminders_filter_dto.rs  mod.rs
src/reminders/models/: reminder.rs
src/users/: controller.rs  mod.rs  service.rs
src/users/dtos/: get_users_filter_dto.rs  mod.rs
src/users/models/: user.rs
src/users/util/: username.rs
(+16 files in other folders)
