[package]
name = "perroquet-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15.7"
envy = "0.4.2"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
