[package]
name = "perroquet-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15.7"
envy = "0.4.2"

sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid"] }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
