[package]
name = "perroquet-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# axum = { version = "0.7.4", features = ["macros"] }
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

envy = "0.4.2"
dotenvy = "0.15.7"

sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid"] }

reqwest = { version = "0.11.24", features = ["json"] }

jsonwebtoken = "9.2.0"
argon2 = "0.5.3"

validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.3"

uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
rand = "0.8.5"